Changelog
=========

0.8-dev - (unreleased)
----------------------

0.7 - (2011-03-28)
------------------
 * Bug fix: Added translation domain to ZCML files [voineali #4139]
 * Bug fix: return the field when traversing to /image in traverser [tiberich #4135]

0.6 - (2011-02-17)
----------------------
 * Use try/except in display method to avoid errors when blobs are missing [tiberich]

0.5 - (2011-01-26)
------------------
* Added JPEG to known formats for thumbnails [voineali #3847]

0.4 - (2010-05-17)
------------------
* Fixed "typo" in fallback interfaces map. [pthulin]

0.3 - (2010-05-07)
------------------
* Use fallback images to ensure that an image is always returned. [pthulin]

0.2.1 - (2010-01-18)
--------------------
* removed empty skin folder

0.2 - (2010-01-18)
------------------
* Thumbnails are always in formats PNG, JPG or GIF even if original is something else i.e TIFF
* Enabled folder.ImageView for ATTopics. [pthulin]
* Fixed bug where 16:9 images scaled to 16:9 background resulted in black borders. [pthulin]
* Simplified design, removed ImageLink and ImageTag. [pthulin]
* Add black borders to 4:3 images scaled to 16:9, and don't stretch the play button. [pthulin]

0.1 - Unreleased
----------------
* Initial release
