@@ -8,11 +8,12 @@ ATFolder integration
     >>> self.setRoles(['Manager'])
     >>> id = portal.invokeFactory('Folder', id='testfolder', title='Title')
     >>> folder = portal[id]
+    >>> portal.portal_workflow.doActionFor(folder, 'publish')
 
 ATFolders should have a working ImageView adapter that takes the first image inside it:
 
     >>> foo = folder.invokeFactory('Image', id='image1', image=img)
-
-    >>> browser.open('http://localhost/testfolder/image_thumb')
-    >>> print browser.contents
+    >>> browser.open('http://localhost/plone/testfolder/image_thumb')
+    >>> "PNG" in browser.contents
+    True
 
