@@ -4,22 +4,25 @@ from Products.PloneTestCase.layer import onsetup
 from Products.Five import zcml
 from Products.Five import fiveconfigure
 import valentine.imagescales
+import p4a.video
 
 
 @onsetup
 def setup_thumbnailer():
     fiveconfigure.debug_mode = True
-    #import Products.Five
-    #import Products.FiveSite
-    #zcml.load_config('meta.zcml', Products.Five)
-    #zcml.load_config('configure.zcml', Products.FiveSite)
-    #ztc.installProduct('Five')
+    zcml.load_site()
+    zcml.load_config('configure.zcml', p4a.video)
+    zcml.load_config('test.zcml', p4a.video)
     zcml.load_config('configure.zcml', valentine.imagescales)
+    zcml.load_config('overrides.zcml', valentine.imagescales)
     fiveconfigure.debug_mode = False
 
 
 setup_thumbnailer()
-PloneTestCase.setupPloneSite(products='valentine.imagescales')
+PloneTestCase.setupPloneSite(
+        products='valentine.imagescales',
+        extension_profiles=['plone.app.imaging:default'],
+        )
 
 
 class ImageScalesTestCase(PloneTestCase.FunctionalTestCase):    #PloneTestCase
